--- a/food/src/main/resources/application.properties
+++ b/food/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=food
 
 # Database connection properties
-spring.datasource.url=jdbc:mysql://localhost:3306/lendo
+spring.datasource.url=jdbc:mysql://localhost:3306/food
 spring.datasource.username=root
 spring.datasource.password=8618609838
 
